# hand-gesture-engine

./: .gitignore  LICENSE  MANIFEST.in  README.md  gesture_config.yaml  pyproject.toml  setup.py
examples/: demo.py  guesture_game.py  test.py
hand_gesture/: engine.py  gestures.py
