[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-gesture-engine"
version = "0.1.0"
description = "A modular real-time hand gesture recognition engine using MediaPipe"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name= "Karan Vishwakarma" }
]

keywords = [
  "computer-vision",
  "hand-tracking",
  "gesture-recognition",
  "mediapipe",
  "opencv",
]

dependencies = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "numpy",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/KaranVishwakarma-1807/hand-gesture-engine"
Repository = "https://github.com/KaranVishwakarma-1807/hand-gesture-engine"
Issues = "https://github.com/KaranVishwakarma-1807/hand-gesture-engine/issues"

requires-python = ">=3.9"

[tool.setuptools]
packages = ["hand_gesture"]

[tool.setuptools.package-data]
hand_gesture = ["assets/*.task"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hand_gesture*"]